
	Rename get_stringstream_precision_default().

	* glom/libglom/data_structure/glomconversions.[h|cc]:
	get_stringstream_precision_default(): Rename this to the slighly-better 
	named (because it's not mentioning implementation) 
	NumericFormat::get_default_precision() in
	* glom/libglom/data_structure/numeric_format.[h|cc]: and document it 
	vaguely.

2010-01-14  Murray Cumming  <murrayc@murrayc.com>

	Minor simplification.

	* glom/libglom/data_structure/glomconversions.cc:
	get_stringstream_precision_default(): Simplify this function, for 
	Michael to see.

2010-01-14  Michael Hasselmann  <michaelh@openismus.com>

	Make the default precision used for stringstreams available for libglom users

	* glom/libglom/data_structure/glomconversions.[h|cc]
	(get_stringstream_precision_default): Wrap the constant used into a function
	and export it in the headers. Users of libglom need it to show the same
	precision for Glom's numeric type.


2010-01-12  Murray Cumming  <murrayc@murrayc.com>

	Music Collection Example: Changed a layout.

	* examples/example_music_collection.glom: Albums: List View:
	Add some related records to show a problem in Qlom.

2010-01-08  Murray Cumming  <murrayc@murrayc.com>

	Correct use of locales when creating text representations.

	* glom/main.cc:  Set std::locale::global() to the user's current locale,
        forcing us to imbue streams to whatever we actually want.
	* glom/libglom/connectionpool_backends/postgres_self.cc: startup():
	Do not use Utils::string_from_decimal() for the port number, because it 
	is meant to use the user's locale, but we need it in the C locale.
	* glom/libglom/data_structure/field.cc: to_file_format(): Use 
	std::locale::classic() when we want the C locale, not std::locale(), 
	which means the user's locale, which was previously the C one by chance.
	* glom/libglom/utils.cc: string_from_decimal(): Imbue the stream 
	as wanted.

2010-01-07  Michael Hasselmann  <michaelh@openismus.com>
