@@ -24,6 +24,15 @@
 	* glom/libglom/data_structure/numeric_format.[h|cc]: and document it 
 	vaguely.
 
+2010-01-14 Michael Hasselmann <michaelh@openismus.com>
+
+	Make the default precision used for stringstreams available for libglom users
+
+	* glom/libglom/data_structure/glomconversions.[h|cc]
+	(get_stringstream_precision_default): Wrap the constant used into a function
+	and export it in the headers. Users of libglom need it to show the same
+	precision for Glom's numeric type.
+
 2010-01-14  Murray Cumming  <murrayc@murrayc.com>
 
 	Minor simplification.
